# amd_ml

./: .gitignore  CMakeLists.txt  DEBUGGING_GUIDE.md  execute.sh  makefile  test.py
Benchmarks/: benchmark_SGD.py  benchmark_lr.py  test.ipynb
Profiling/: lr_benchmark.AnalysisSummary.html  lr_benchmark.DiagnosticsSummary.html
bindings/: amd_ml_bindings.cpp  amd_ml_lr_bindings.cpp
include/: amdMemoryManagement.h  types.h
include/SGD/: amdSGDLinearRegression.h  kernelSGDLinearRegresion.h
include/lr/: amdLinearRegression.h  kernelLinearRegresion.h
src/: amdMemoryManagement.cu
src/SGD/: amdSGDLinearRegression.cu  kernelSGDLinearRegresion.cu  main_SGD.cu
src/lr/: amdLinearRegression.cu  kernelLinearRegresion.cu  main_lr.cu
